[package]
name = "ftm_poller"
version = "0.1.0"
authors = ["GooGrand <55867268+GooGrand@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = "0.15.0"
hex-literal = "0.3.1"
secp256k1 = "0.20.1"
tokio = {version = "0.2", features = ["full"]}
tokio-diesel = "0.3.0"
chrono = "0.4.19"
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono"] }
